@@ -1,70 +1,0 @@
-package com.linkedin.pegasus.gradle.tasks
-
-
-import com.linkedin.pegasus.gradle.SchemaFileType
-import org.gradle.api.DefaultTask
-import org.gradle.api.file.FileCollection
-import org.gradle.api.tasks.CacheableTask
-import org.gradle.api.tasks.Classpath
-import org.gradle.api.tasks.InputDirectory
-import org.gradle.api.tasks.OutputDirectory
-import org.gradle.api.tasks.PathSensitive
-import org.gradle.api.tasks.PathSensitivity
-import org.gradle.api.tasks.SkipWhenEmpty
-import org.gradle.api.tasks.TaskAction
-import org.gradle.process.internal.JavaExecAction
-
-
-/**
- * Translates files between the .pdsc and .pdl Pegasus schema formats.
- */
-@CacheableTask
-class TranslateSchemasTask extends DefaultTask {
-  /**
-   * Directory to write the translated files.
-   */
-  @OutputDirectory
-  File destinationDir
-
-  /**
-   * Directory containing the data schema files to translate.
-   */
-  @InputDirectory
-  @SkipWhenEmpty
-  @PathSensitive(PathSensitivity.RELATIVE)
-  File inputDir
-
-  /**
-   * The resolver path.
-   */
-  @Classpath
-  FileCollection resolverPath
-
-  @Classpath
-  FileCollection codegenClasspath
-
-  SchemaFileType sourceFormat = SchemaFileType.PDSC
-  SchemaFileType destinationFormat = SchemaFileType.PDL
-
-  @TaskAction
-  protected void translate()
-  {
-    project.logger.info('Translating data schemas ...')
-    destinationDir.mkdirs()
-
-    final String resolverPathStr = (resolverPath + project.files(inputDir)).asPath
-
-    project.javaexec { JavaExecAction it ->
-      it.main = 'com.linkedin.restli.tools.data.SchemaFormatTranslator'
-      it.classpath codegenClasspath
-      it.jvmArgs '-Dgenerator.resolver.path=' + resolverPathStr
-      it.args '--source-format'
-      it.args sourceFormat.getFileExtension()
-      it.args '--destination-format'
-      it.args destinationFormat.getFileExtension()
-      it.args resolverPathStr
-      it.args inputDir.absolutePath
-      it.args destinationDir.absolutePath
-    }
-  }
-}
